# control

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONSTEVAL_ENFORCEMENT.md  CONTROL_DESIGN.md  Doxyfile  Makefile  README.md  REFERENCE.md  REFERENCE_INDEX.md  Tupfile.lua  Tuprules.lua  compile_commands.json  concepts.md  decisions.md  iwyu.imp  roadmap.md  test.py  tiers.md  todo.md  tup.config  tup.config.default
.claude/skills/review-control-header/: SKILL.md
.github/: copilot-instructions.md
Eigen/src/Core/: Matrix.h
analysis/: Makefile  README.md  math_utils.cpp  math_utils.hpp  minimax_trig.py  plot_codywaite.py  ti_arm_trig.cpp  wet_trig.cpp  wet_trig.hpp
analysis/compile_profile/: README.md  profile.py
analysis/pll/: Makefile  README.md  generate_pll_report.cpp  matlab.m  pll_report.md  pll_report_compare.py  pll_report_plots.cpp  pll_report_support.hpp  pll_report_text.cpp
analysis/sogi/: Makefile  sogi_gen.cpp
analysis/trig/: Makefile  README.md  generate_coefficients.py  math_utils.cpp  math_utils.hpp  plot_accuracy.py  plot_codywaite.py  plot_comparisons.py  ti_arm_trig.hpp
asm_checks/: Tupfile.lua  cycle_guesser.py  kf_update_check.cpp  pmac_servo_check.cpp  wet_profile.hpp
cmake/: controlConfig.cmake.in
control/: LTI.hpp
docs/: control_header.md  matrix_views.md
examples/: Tupfile.lua  example_bouncing_ball.cpp  example_buck_converter.cpp  example_cart_pole.cpp  example_cascade_pos_vel.cpp  example_coordinated_joints.cpp  example_corexy_move.cpp  example_critical_damping.cpp  example_encoder_velocity.cpp  example_eskf_arduino.cpp  example_foc.cpp  example_hydraulic_valve.cpp  example_impulse_nyquist_rlocus.cpp  example_input_shaper_resonance.cpp  example_inverted_pendulum.cpp  example_kinematic_maps.cpp  example_lpf.cpp  example_lqr_pendulum.cpp  example_lti_operations.cpp  example_math_backend.cpp  example_motor_control.cpp  example_nonlinear.cpp  example_parameter_sweep.cpp  example_pendulum_sim.cpp  example_pid_design.cpp  example_second_order.cpp  example_servo_commands.cpp  example_servo_drive.cpp  example_sogi.cpp  example_solve_lti.cpp  example_solve_nonlinear.cpp  example_swashplate_stsmc.cpp  example_trajectory_gallery.cpp  example_workflow_end_to_end.cpp  example_zpk.cpp  template.hpp  wet_profile.hpp
examples/PMAC/: example_pmac_bus_limit.cpp  example_pmac_calibration.cpp  example_pmac_estimator.cpp  example_pmac_servo.cpp  example_pmac_thermal.cpp
examples/servo_drive/: servo_gui.py  servo_sim.cpp  servo_sim.h
inc/: adrc.hpp  analysis.hpp  block.hpp  colvec.hpp  constexpr_complex.hpp  constexpr_math.hpp  control_design.hpp  control_online.hpp  discretization.hpp  eigen.hpp  eigenvalues.hpp  ekf.hpp  eskf.hpp  filters.hpp  geometry.hpp  integrator.hpp  kalman.hpp  lead_lag.hpp  linearization.hpp  lqg.hpp  lqgi.hpp  lqi.hpp  lqr.hpp  matlab.hpp  matrix.hpp  matrix_functions.hpp  motor_control.hpp  pid.hpp  pid_design.hpp  pll.hpp  plot.hpp  plot_plotly.hpp  pr.hpp  ricatti.hpp  rotation.hpp  rowvec.hpp  sensor_fusion.hpp  simulate.hpp  smc.hpp  sogi.hpp  (+6 more)
inc/math/: constexpr_complex.hpp  math_backend.hpp  std_backend.hpp  ti_arm_backend.hpp  wet_trig.hpp  wetmelon_math.hpp
inc/matrix/: block.hpp  cholesky.hpp  colvec.hpp  eigen.hpp  matrix.hpp  matrix_functions.hpp  matrix_traits.hpp  rowvec.hpp  views.hpp
inc/wet/: analysis.hpp  backend.hpp  config.hpp  control.hpp  geometry.hpp  iec61131.hpp  matlab.hpp  motor_control.hpp  riccati.hpp  roadmap.md  thermistor.hpp  toolbox.hpp  utility.hpp  workbench.hpp
inc/wet/analysis/: analysis.hpp  identification.hpp  linearization.hpp  riccati.hpp  stability.hpp
inc/wet/controllers/: adrc.hpp  cartesian_move.hpp  cascade.hpp  controller_concept.hpp  dob.hpp  esc.hpp  excitation.hpp  harmonic_suppression.hpp  hinf.hpp  input_shaper.hpp  lead_lag.hpp  lpv.hpp  lqg.hpp  lqgi.hpp  lqi.hpp  lqr.hpp  mpc.hpp  pid.hpp  pid_autotune.hpp  pid_design.hpp  pll.hpp  pole_placement.hpp  pr.hpp  relay_autotune.hpp  repetitive.hpp  ricatti.hpp  smc.hpp  stsmc.hpp  synthesis.hpp  topp.hpp  trajectory.hpp
inc/wet/design/: linearization.hpp  lyapunov.hpp  pid_autotune.hpp  pid_design.hpp  pole_placement.hpp  relay_autotune.hpp  riccati.hpp  (+2 more)
libs/: .gitignore  Tupfile.lua  expected.hpp  ti_arm_trig.cpp  ti_arm_trig.hpp
python/: .gitignore  Tupfile.lua  odrive_system.py  odrive_tuning_gui.py  pycontrol.cpp  requirements.txt
source/: LTI.cpp  LTI.hpp  Tupdefault.lua  Tupfile.lua  control.cpp  control.hpp  format.hpp  integrator.hpp  lti_model_reduction.cpp  lti_operations.cpp  lti_ss.cpp  lti_tf.cpp  lti_zpk.cpp  lyapunov.cpp  main.cpp  matlab.hpp  nonlinear.cpp  nonlinear.hpp  observer.cpp  observer.hpp  solver.cpp  solver.hpp  ss.cpp  ss.hpp  tf.cpp  tf.hpp  types.hpp  utility.hpp  zpk.cpp  zpk.hpp
test/: Tupfile.lua  test_control.cpp  test_integrator.cpp  test_lti_operations.cpp  test_model_reduction.cpp  test_observer.cpp  test_runner.cpp  test_solver.cpp  test_state_space.cpp  test_transfer_function.cpp  test_utility.cpp  test_zpk.cpp
tests/: Tupfile.lua  plot_check.hpp  test_4x4_systems.cpp  test_actuator.cpp  test_adrc.cpp  test_analysis.cpp  test_analysis_extended.cpp  test_api.cpp  test_arbitrary_pole_placement.cpp  test_backend.cpp  test_biquad.cpp  test_bounds.cpp  test_calibration.cpp  test_cartesian_move.cpp  test_cascade.cpp  test_cholesky.cpp  test_conditioning.cpp  test_constexpr_math.cpp  test_continuous_lqr.cpp  test_control_design.cpp  test_controller_concept.cpp  test_decomposition.cpp  test_design.cpp  test_differentiator.cpp  test_discretization.cpp  test_disturbance_observer.cpp  test_dsogi_pll.cpp  test_eigen.cpp  test_eigenvalues.cpp  test_ekf.cpp  test_embedded_umbrella.cpp  test_encoder.cpp  test_esc.cpp  test_eskf.cpp  test_excitation.cpp  test_field_weakening.cpp  test_filters.cpp  test_foc.cpp  test_harmonic_suppression.cpp  test_identification.cpp  (+74 more)
tests/etl_backend/: Tupfile.lua  test_etl_backend.cpp  wet_profile.hpp
tests/wet_backend/: Tupfile.lua  test_wet_backend.cpp
tools/: gen_reference.py
(+107 files in other folders)
